Hide header images on smaller screens

--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <header>
-      <img src="img/groke.gif" />
-      <div>
+      <img src="img/groke.gif" class="desktopOnly"/>
+      <div class="header">
         <h1>Welcome to Antons Portfolio!</h1>
         <p align="center">
           <a href="index.html">Home</a>
@@ -28,7 +28,7 @@
           <img src="img/ns_logo.gif" />
         </div>
       </div>
-      <img src="img/groke.gif" />
+      <img src="img/groke.gif" class="desktopOnly"/>
     </header>
     <div class="container">
       <h1>About me</h1>
