Hide it also on all the other pages
I forgot

--- a/contact.html
+++ b/contact.html
@@ -14,21 +14,21 @@
   </head>
   <body>
     <header>
-      <img src="img/groke.gif" />
-      <div>
+      <img src="img/groke.gif" class="desktopOnly"/>
+      <div class="header">
         <h1>Welcome to Antons Portfolio!</h1>
         <p align="center">
           <a href="index.html">Home</a>
           <a href="about.html">About me</a>
           <a href="contact.html">Contact</a>
         </p>
-        <section>
+        <div>
           <img src="img/ie_logo.gif" />
           <img src="img/notepad.gif" />
           <img src="img/ns_logo.gif" />
-        </section>
+        </div>
       </div>
-      <img src="img/groke.gif" />
+      <img src="img/groke.gif" class="desktopOnly"/>
     </header>
 
     <div class="container"> 
