--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <img src="img/groke.gif">
-            <div>
-                <h1>Welcome to Antons Portfolio!</h1>
-        <p align="center">
+  <header>
+    <img src="img/groke.gif" class="desktopOnly"/>
+    <div class="header">
+      <h1>Welcome to Antons Portfolio!</h1>
+      <p align="center">
         <a href="index.html">Home</a>
         <a href="about.html">About me</a>
         <a href="contact.html">Contact</a>
-        </p>
-        <section>
-            <img src="img/ie_logo.gif">
-            <img src="img/notepad.gif">
-            <img src="img/ns_logo.gif">
-        </section>
-    </div>       
-        <img src="img/groke.gif">
-    </header>
+      </p>
+      <div>
+        <img src="img/ie_logo.gif" />
+        <img src="img/notepad.gif" />
+        <img src="img/ns_logo.gif" />
+      </div>
+    </div>
+    <img src="img/groke.gif" class="desktopOnly"/>
+  </header>
    
     <div class="container"> 
         <h1>
