--- a/index.html
+++ b/index.html
@@ -12,52 +12,42 @@
 <body>
   <header>
     <img src="img/groke.gif" class="desktopOnly"/>
-    <div class="header">
-      <h1>Welcome to Antons Portfolio!</h1>
-      <p align="center">
+    <section class="header">
+      <h1 class="header">Welcome to Antons Portfolio!</h1>
+      <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About me</a>
         <a href="contact.html">Contact</a>
-      </p>
-      <div>
+      </nav>
+      <div class="smallBanners">
         <img src="img/ie_logo.gif" />
-        <img src="img/notepad.gif" />
+        <img class="desktopOnlySmaller" src="img/notepad.gif" />
         <img src="img/ns_logo.gif" />
       </div>
-    </div>
+    </section>
     <img src="img/groke.gif" class="desktopOnly"/>
   </header>
    
-    <div class="container"> 
-        <h1>
-          Portfolio  
-        </h1>
-        <div class = "portfolio">
-        
-        <img align="right" class="image-contain" src="img/moai_word.png" >
-        <h3>
-         2009 - Moai statue - Digital art made in Microsoft Word
-        </h3>
-        <!-- Text from Hipsum.co -->
-        <p>
-            <b>Made this I think around 2009 on my dads laptop when i found out about the word remove background tool. Never thought i would find it but its survived on the cloud.</b> Something is messed up about my word installation though which has made the background black.
-            Fam williamsburg neutra bespoke fanny pack prism pitchfork cold-pressed paleo slow-carb blog wayfarers. Ascot pok pok hammock jianbing, retro iPhone prism helvetica. Vape crucifix sartorial DIY trust fund copper mug four loko forage woke aesthetic succulents pork belly master cleanse.
-        </p>
-        </div>
-        <div class = "portfolio">
-        
-        <img align="right" class="image-contain" src="img/frog.svg" >
-        <h3>
-         2023 - "Biggy" Vector Frog
-        </h3>
-        <p>
-         <b> Main characther in the "Frog Race" series. He won the race despite starting in the back. </b>Fam williamsburg neutra bespoke fanny pack prism pitchfork cold-pressed paleo slow-carb blog wayfarers. Bespoke blue bottle readymade, copper mug vinyl asymmetrical cold-pressed before they sold out hella PBR&B whatever 3 wolf moon marxism. Truffaut selfies put a bird on it craft beer. Vape crucifix sartorial DIY trust fund copper mug four loko forage woke aesthetic succulents pork belly master cleanse.
-        </p>
-        </div>
-        <h2> ... More to come</h2>
-        </div>
-    </div>
-      <p class ="footer" align="center">This Web page is created and maintained by Anton Kinnander.</p>
+    <section class="container"> 
+      <div class = "inner"> 
+      <div class = "portfolio-grid">
+        <img class="grid-media" src="img/grid-media/grid-1.png">
+        <img class="grid-media" src="img/grid-media/grid-2.png">
+        <img class="grid-media" src="img/grid-media/grid-3.png">
+        <img class="grid-media" src="img/grid-media/grid-4.png">
+        <img class="grid-media" src="img/grid-media/grid-5.png">
+        <img class="grid-media" src="img/grid-media/grid-6.png">
+        <img class="grid-media" src="img/grid-media/grid-7.png">
+        <img class="grid-media" src="img/grid-media/grid-8.png">
+        <img class="grid-media" src="img/grid-media/grid-9.png">
+        <img class="grid-media" src="img/grid-media/grid-10.png">
+        <img class="grid-media" src="img/grid-media/grid-11.png">
+        <img class="grid-media" src="img/grid-media/grid-12.png">
+        <img class="grid-media" src="img/grid-media/grid-13.png">
+      </div>
+      </div>
+      </section>
+      <p class ="footer">This Web page is created and maintained by Anton Kinnander.</p>
 </body>
 </html>
 
