--- a/about.html
+++ b/about.html
@@ -15,22 +15,24 @@
   <body>
     <header>
       <img src="img/groke.gif" class="desktopOnly"/>
-      <div class="header">
-        <h1>Welcome to Antons Portfolio!</h1>
-        <p align="center">
+      <section class="header">
+        <h1 class="header">Welcome to Antons Portfolio!</h1>
+        <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About me</a>
           <a href="contact.html">Contact</a>
-        </p>
-        <div>
+        </nav>
+        <div class="smallBanners">
           <img src="img/ie_logo.gif" />
-          <img src="img/notepad.gif" />
+          <img class="desktopOnlySmaller" src="img/notepad.gif" />
           <img src="img/ns_logo.gif" />
         </div>
-      </div>
+      </section>
       <img src="img/groke.gif" class="desktopOnly"/>
     </header>
-    <div class="container">
+
+    <section class="container">
+      <div class = "inner">
       <h1>About me</h1>
       <!-- Filler text from Hipsum.co -->
       <p>
@@ -67,7 +69,8 @@
         </b>
       </p>
     </div>
-    <p class="footer" align="center">
+    </section>
+    <p class="footer">
       This Web page is created and maintained by Anton Kinnander.
     </p>
   </body>
