--- a/contact.html
+++ b/contact.html
@@ -14,43 +14,72 @@
   </head>
   <body>
     <header>
-      <img src="img/groke.gif" class="desktopOnly"/>
-      <div class="header">
-        <h1>Welcome to Antons Portfolio!</h1>
-        <p align="center">
+      <img src="img/groke.gif" class="desktopOnly" />
+      <section class="header">
+        <h1 class="header">Welcome to Antons Portfolio!</h1>
+        <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About me</a>
           <a href="contact.html">Contact</a>
-        </p>
-        <div>
+        </nav>
+        <div class="smallBanners">
           <img src="img/ie_logo.gif" />
-          <img src="img/notepad.gif" />
+          <img class="desktopOnlySmaller" src="img/notepad.gif" />
           <img src="img/ns_logo.gif" />
         </div>
-      </div>
-      <img src="img/groke.gif" class="desktopOnly"/>
+      </section>
+      <img src="img/groke.gif" class="desktopOnly" />
     </header>
 
-    <div class="container"> 
-    <div class = "form_container"><h1>Contact me</h1>
-      <!-- https://www.w3schools.com/html/html_form_attributes.asp -->
-      <!-- https://www.w3schools.com/css/css_form.asp -->
+    <section class="container">
+      <div class="inner">
+        <div class="form_container">
+          <h1>Contact me</h1>
+          <!-- https://www.w3schools.com/html/html_form_attributes.asp -->
+          <!-- https://www.w3schools.com/css/css_form.asp -->
 
-      <input type = "text" name ="name" placeholder="Name" class="form">
-      <input type = "text" name ="Subject" placeholder="Subject" class="form">
-      <input type = "text" name ="Email" placeholder="Email" required class="form">
-      <textarea rows = "5" cols ="60" name="message" placeholder="Enter text..." autocomplete="off" class="form"></textarea>
-      <!-- User @BalusC https://stackoverflow.com/questions/2906582/how-do-i-create-an-html-button-that-acts-like-a-link -->
-      <div class="tos">
-        <!-- Make checkbox toggle button https://stackoverflow.com/questions/18110865/how-to-disable-enable-a-button-with-a-checkbox-if-checked -->
-        <p><input type="checkbox" name="tos" id="checkbox" onchange="document.getElementById('contactFormSend').disabled = !this.checked;"> I agree to the <a href="tos.html" target=”_blank” >terms</a></p>
+          <input type="text" name="name" placeholder="Name" class="form" />
+          <input
+            type="text"
+            name="Subject"
+            placeholder="Subject"
+            class="form"
+          />
+          <input
+            type="text"
+            name="Email"
+            placeholder="Email"
+            required
+            class="form"
+          />
+          <textarea
+            rows="5"
+            cols="60"
+            name="message"
+            placeholder="Enter text..."
+            autocomplete="off"
+            class="form"
+          ></textarea>
+          <!-- User @BalusC https://stackoverflow.com/questions/2906582/how-do-i-create-an-html-button-that-acts-like-a-link -->
+          <div class="tos">
+            <!-- Make checkbox toggle button https://stackoverflow.com/questions/18110865/how-to-disable-enable-a-button-with-a-checkbox-if-checked -->
+            <p>
+              <input
+                type="checkbox"
+                name="tos"
+                id="checkbox"
+                onchange="document.getElementById('contactFormSend').disabled = !this.checked;"
+              />
+              I agree to the <a href="tos.html" target="”_blank”">terms</a>
+            </p>
+          </div>
+          <form action="contact.html">
+            <button type="submit" id="contactFormSend" disabled>Send</button>
+          </form>
+        </div>
       </div>
-      <form action = "contact.html"> 
-      <button type = "submit" id="contactFormSend" disabled>Send</button>
-      </form>
-    </div>
-    </div>
-    <p class="footer" align="center">
+    </section>
+    <p class="footer">
       This Web page is created and maintained by Anton Kinnander.
     </p>
   </body>
