--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <h1 class="header">Welcome to Antons Portfolio!</h1>
         <nav>
           <a href="index.html">Home</a>
-          <a href="about.html">About me</a>
+          <a href="portfolio.html">Portfolio</a>
           <a href="contact.html">Contact</a>
         </nav>
         <div class="smallBanners">
