--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   </head>
   <body>
     <header>
-      <img src="img/groke.gif" class="desktopOnly" />
+      <img src="img/groke.gif" class="desktopOnly"/>
       <section class="header">
         <h1 class="header">Welcome to Antons Portfolio!</h1>
         <nav>
           <a href="index.html">Home</a>
-          <a href="about.html">About me</a>
+          <a href="portfolio.html">Portfolio</a>
           <a href="contact.html">Contact</a>
         </nav>
         <div class="smallBanners">
@@ -28,27 +28,47 @@
           <img src="img/ns_logo.gif" />
         </div>
       </section>
-      <img src="img/groke.gif" class="desktopOnly" />
+      <img src="img/groke.gif" class="desktopOnly"/>
     </header>
 
     <section class="container">
-      <div class="inner">
-        <div class="portfolio-grid">
-          <img class="grid-media" src="img/grid-media/grid-1.png" />
-          <img class="grid-media" src="img/grid-media/grid-2.png" />
-          <img class="grid-media" src="img/grid-media/grid-3.png" />
-          <img class="grid-media" src="img/grid-media/grid-4.png" />
-          <img class="grid-media" src="img/grid-media/grid-5.png" />
-          <img class="grid-media" src="img/grid-media/grid-6.png" />
-          <img class="grid-media" src="img/grid-media/grid-7.png" />
-          <img class="grid-media" src="img/grid-media/grid-8.png" />
-          <img class="grid-media" src="img/grid-media/grid-9.png" />
-          <img class="grid-media" src="img/grid-media/grid-10.png" />
-          <img class="grid-media" src="img/grid-media/grid-11.png" />
-          <img class="grid-media" src="img/grid-media/grid-12.png" />
-          <img class="grid-media" src="img/grid-media/grid-13.png" />
-        </div>
-      </div>
+      <div class = "inner">
+      <h1>About me</h1>
+      <!-- Filler text from Hipsum.co -->
+      <p>
+        Shabby chic gochujang venmo sriracha organic humblebrag. Trust fund
+        grailed fanny pack cred occupy unicorn. Flexitarian edison bulb fanny
+        pack slow-carb semiotics prism tacos try-hard pork belly chicharrones.
+        Lumbersexual bitters enamel pin solarpunk jean shorts try-hard lomo
+        actually aesthetic pabst live-edge meditation mumblecore praxis disrupt.
+      </p>
+      <p>
+        Fam williamsburg neutra bespoke fanny pack prism pitchfork cold-pressed
+        paleo slow-carb blog wayfarers. Ascot pok pok hammock jianbing, retro
+        iPhone prism helvetica. Bespoke blue bottle readymade, copper mug vinyl
+        asymmetrical cold-pressed before they sold out hella PBR&B whatever 3
+        wolf moon marxism. Truffaut selfies put a bird on it craft beer. Vape
+        crucifix sartorial DIY trust fund copper mug four loko forage woke
+        aesthetic succulents pork belly master cleanse.
+      </p>
+      <p>
+        Fingerstache lo-fi swag cray, pop-up biodiesel ennui aesthetic
+        distillery tacos 8-bit. Street art brooklyn keytar actually. Cornhole
+        synth shoreditch fashion axe etsy, viral bicycle rights hammock affogato
+        heirloom mumblecore waistcoat before they sold out brooklyn. Blue bottle
+        flannel skateboard, synth godard man braid chillwave art party YOLO.
+        Lo-fi slow-carb skateboard salvia, next level sustainable letterpress
+        banjo whatever intelligentsia knausgaard.
+      </p>
+      <p>
+        <b>
+          I like the character Mårran from Mumindalen, in english "The Groke"
+          from Moomin Valley. He is the villain of the story and very very
+          scary. Pop-up biodiesel ennui aesthetic distillery tacos 8-bit. Street
+          art brooklyn keytar actually.
+        </b>
+      </p>
+    </div>
     </section>
     <p class="footer">
       This Web page is created and maintained by Anton Kinnander.
