I forget nothing big

--- a/work.html
+++ b/work.html
@@ -36,8 +36,8 @@
         <div class="grid-information">
           <img src="img/grid-media/grid-1.png" alt="Pixels mostly red some are darker, black even" class="grid-img">
           <h1 class="grid-title"> Yellow Pixels</h1>
-          <h2 class="grid-sub">Pixel art |  Made using KidPix for windows 98 |   by: creator</h2>
-          <p class="grid-text">I'm baby sartorial edison bulb banh mi, asymmetrical butcher salvia iceland bushwick hot chicken gentrify vegan shoreditch echo park. Chambray umami humblebrag yr af listicle chartreuse. VHS thundercats cloud bread vaporware actually. Lyft taiyaki PBR&B woke DIY, la croix coloring book beard. Cold-pressed swag neutral milk hotel ascot fam. Photo booth yuccie waistcoat man braid chambray celiac 8-bit master cleanse kitsch poke. Cardigan chia selvage, ascot DSA leggings tonx waistcoat schlitz.
+          <h2 class="grid-sub">Pixel art |  Made using KidPix for windows 98 |   by: <a href="https://paupowpow.neocities.org/">PAUPOWPOW</a></h2>
+          <p class="grid-text"><b>I'm baby sartorial edison bulb banh mi</b>. Asymmetrical butcher salvia iceland bushwick hot chicken gentrify vegan shoreditch echo park. Chambray umami humblebrag yr af listicle chartreuse. VHS thundercats cloud bread vaporware actually. Lyft taiyaki PBR&B woke DIY, la croix coloring book beard. Cold-pressed swag neutral milk hotel ascot fam. Photo booth yuccie waistcoat man braid chambray celiac 8-bit master cleanse kitsch poke. Cardigan chia selvage, ascot DSA leggings tonx waistcoat schlitz.
 
             VHS mumblecore +1 organic trust fund chicharrones. 8-bit tousled VHS, gastropub art party normcore raclette mlkshk bruh leggings umami. Actually la croix XOXO occupy fanny pack glossier kombucha hashtag freegan blue bottle leggings aesthetic. Humblebrag artisan kitsch pour-over irony.
             
