--- a/work.html
+++ b/work.html
@@ -42,8 +42,10 @@
           <div class="grid-head">
             <h1 class="grid-title">Yellow Pixels</h1>
             <h2 class="grid-sub">
-              Pixel art | Made using KidPix for windows 98 | by:
-              <a href="https://paupowpow.neocities.org/">PAUPOWPOW</a>
+              Pixel art | Made using KidPix for windows 98 |
+            </h2>
+            <h2 class="grid-sub">
+              by: <a href="https://paupowpow.neocities.org/">PAUPOWPOW</a>
             </h2>
           </div>
           <p class="grid-text">
