--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
       <section class="header">
         <h1 class="header">Welcome to Antons Portfolio!</h1>
         <nav>
-          <a href="index.html">Home</a>
-          <a href="portfolio.html">Portfolio</a>
-          <a href="contact.html">Contact</a>
+          <a class="nav" href="index.html">Home</a>
+          <a class="nav" href="portfolio.html">Portfolio</a>
+          <a class="nav" href="contact.html">Contact</a>
         </nav>
         <div class="smallBanners">
           <img src="img/ie_logo.gif" />
@@ -31,7 +31,115 @@
       <img src="img/groke.gif" class="desktopOnly" />
     </header>
 
-    <section class="container">
+    <section class="news container">
+      <div class="scroll">
+        <h2 class="news">
+          |
+          <a
+            href="https://nyheter24.se/noje/1142953-darfor-brakar-kim-och-kourtney-kardashian-kommer-inte-bli-vanner-igen"
+          >
+            Därför bråkar Edward och Kourtney Blom: "Kommer inte bli vänner
+            igen"</a
+          >
+          |
+          <a
+            href="https://www.mynewsdesk.com/se/circlek_sverige/pressreleases/edward-blom-i-exklusivt-korvsamarbete-med-circle-k-2940279"
+          >
+            Edward Blom i exklusivt korvsamarbete med Circle K</a
+          >
+          |
+          <a
+            href="https://www.etc.se/feature/edward-blom-jag-aer-som-en-invandrare"
+          >
+            Edward Blom: ”Jag är som en invandrare”</a
+          >
+          |
+          <a
+            href="https://www.aftonbladet.se/nojesbladet/a/l3a0dL/kim-kardashian-avslojar-kris-jenner-drack-vodka-varje-dag"
+          >
+            Edward Blom avslöjar: Kris Jenner drack vodka varje dag</a
+          >
+          |
+          <a
+            href="https://nyheter24.se/noje/1140678-fansen-i-chock-av-bilden-pa-kim-kardashian-vad-ar-det-mellan-benen"
+          >
+            Fansen i chock av bilden på Edward Blom: "Vad hänger mellan
+            benen?"</a
+          >
+          |
+          <a
+            href="https://nyheter24.se/noje/958798-kim-kardashian-tackar-biden-efter-erkannandet-av-folkmordet"
+          >
+            Edward Blom tackar Biden efter erkännandet av folkmordet</a
+          >
+          |
+          <a
+            <a
+            href="https://nyheter24.se/noje/918842-kim-kardashian-berattar-var-hog-nar-jag-gifte-mig"
+          >
+            Edward Blom berättar: "Var hög när jag gifte mig"</a
+          >
+          |
+          <!-- <a
+            href="https://nyheter24.se/noje/932220-kim-kardashian-visade-hela-harligheten-pa-vag-ut-fran-restaurangen"
+          >
+            Edward Blom visade hela härligheten på väg ut från restaurangen</a>-->
+          <a
+            href="https://www.svd.se/a/AP2eAM/kardashians-vag-fran-stylist-till-riskkapitalist"
+            >Edward Blom ger sig in i finansbranschen</a
+          >
+          |
+          <a
+            href="https://nyheter24.se/noje/1037398-kim-och-khloe-kardashian-chockar-fansen-tagit-bort-rumporna"
+          >
+            Edward och Khloé Blom chockar fansen: "Tagit bort rumporna"</a
+          >
+          |
+          <a
+            href="https://www.aftonbladet.se/nojesbladet/a/onKzxR/darfor-betalar-kanye-west-miljoner-i-underhall-till-kim-kardashian"
+            >Därför betalar Kanye West miljoner i underhåll till Edward Blom</a
+          >
+          |
+          <a
+            href="https://nyheter24.se/nyheter/946206-kanye-west-till-attack-mot-kim-kardashian-vit-makt"
+          >
+            Kanye West till attack mot Edward Blom: "Vit makt"</a
+          >
+          |
+          <a
+            href="https://nyheter24.se/noje/1059386-foljarna-i-chock-efter-kim-kardashians-nya-rumpbild-jag-ar-sa-radd"
+            >Följarna i chock efter Edward Bloms nya rumpbild: "Jag är så
+            rädd"</a
+          >
+          |
+          <a
+            href="https://gaffa.se/nyheter/2023/april/drake-samplar-kim-kardashian-pa-ny-singel/"
+          >
+            Drake samplar Edward Blom på ny singel</a
+          >
+          |
+          <a
+            href="https://www.aftonbladet.se/nojesbladet/a/JJ1mxP/kim-kardashian-in-i-varldspolitiken--vill-varna-turkiet"
+          >
+            Edward Blom varnar Turkiet för inblandning i Armenien</a
+          >
+          |
+          <a
+            href="https://nyheter24.se/noje/1035124-detaljen-i-kim-kardashian-och-pete-davidsons-bild-han-har-stora"
+          >
+            Detaljen i Edward Blom och Pete Davidsons bild: "Han har
+            stora..."</a
+          >
+          <a
+            href="https://www.expressen.se/noje/edward-blom-det-svartnar-for-ogonen-och-jag-mer-eller-mindre-rasar-ihop/"
+          >
+          Edward Blom: ”Det svartnar för mina ögon och jag rasar ihop”</a
+          >
+        </h2>
+      </div>
+    </section>
+
+    <section class="page container">
       <div class="inner">
         <div class="form_container">
           <h1>Contact me</h1>
@@ -70,7 +178,7 @@
                 id="checkbox"
                 onchange="document.getElementById('contactFormSend').disabled = !this.checked;"
               />
-              I agree to the <a href="tos.html" target="”_blank”">terms</a>
+              I agree to the <a href="tos.html" target="”_blank”" class="nav">terms</a>
             </p>
           </div>
           <form action="contact.html">
