--- a/tos.html
+++ b/tos.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <div class="container">
+    <div class="page container">
       <h1>Terms of service</h1>
       <!-- Filler text from Hipsum.co -->
     <p> By agreeing to the terms of service I swear to act in accordance with the following rules:</p>
